--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,9 +9,85 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   color: #000;
   padding: 0.2em 0;
 }
-
+ul{
+  list-style-type: none;
+}
 body {
   padding: 0;
+  background-color: #f8f8f7;
+}
+h1{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 22px;
+}
+h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  color: #282827;
+}
+
+hr{
+  border-color: #282827;
+  background-color: #282827;
+  color: #282827;
+}
+.wrap{
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+#header-buttons{
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-left: 100px;
+  margin-right: 100px;
+}
+.aparece{
+  display: none;
+  text-align: left;
+
+}
+input{
+  border-style: none;
+}
+.header{
+  height: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+.header_1{
+  height: 50px;
+}
+.header_2{
+  position: relative;
+  padding-top: 10px;
+  height: 50px;
+  background-color: #ececeb;
+  color: #282827;
+  text-align: center;
+
+  transition-duration: 1s;
+  transition: height 1s;
+  -moz-transition: height 1s;
+  -webkit-transition: height 1s;
+  -o-transition: height 1s;
+  z-index: 1;
+}
+.header_2:hover, .header_2:hover > .aparece{
+  display: block;
+  height: 300px;
+}
+
+.header, .footer,{
+  background-color: #282827;
+  border-style: none;
+  color: #ececeb;
+  font-family: 'Montserrat', sans-serif;
+}
+.footer{
+  margin-top: 100px;
+  color: #d9d9d8;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -24,7 +100,6 @@ body {
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
   margin-bottom: 10px;
 
   /* Make the masthead heading the same height as the navigation */
@@ -69,9 +144,6 @@ body {
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
 
   /* Remove the padding we set earlier */
   .header,
